--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,7 @@ header{
 
     width: 100%;
     max-width: 1440px;
+    padding-top: 24px;
 }
 
 header img{
@@ -25,4 +26,51 @@ header img{
     font-weight: 300;
     letter-spacing: 2px;
     text-transform: uppercase;
+
+    position: relative;
+}
+
+.navigation_link:hover{
+    color:var(--red);
+}
+
+.navigation_link::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+
+    width: 60%;
+    height: 1px;
+    background: var(--red);
+
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.4s;
+}
+
+.navigation_link:hover::after{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.navigation_social{
+    margin-left: auto;
+
+    display: flex;
+    align-items: center;
+    column-gap: 24px;
+}
+
+.navigation_social svg{
+    width: 20px;
+    height: 20px;
+    opacity: 0.6;
+    transition: 0.4s;
+}
+
+.navigation_social svg:hover{
+    opacity: 1;
+    transform: translateY(-5px);
+    cursor: pointer;
 }
